--- a/envs/environment.yml
+++ b/envs/environment.yml
@@ -1,60 +1,425 @@
-name: POP_MOC
+name: mypythonenv
 channels:
-    - conda-forge
-    - ncar
-    - nodefaults
+  - conda-forge
+  - defaults
+  - r
 dependencies:
-    - bokeh
-    - bottleneck
-    - cartopy
-    - climpred
-    - cf-units
-    - cftime
-    - cmocean
-    - dask==2021.9
-    - dask-jobqueue
-    - distributed==2021.9
-    - dask-labextension
-    - datashader
-    - eofs
-    - esmpy
-    - geocat-viz
-    - geocat-comp
-    - geoviews
-    - holoviews
-    - intake
-    - intake-esm
-    - ipykernel
-    - ipywidgets
-    - jupyter-server-proxy
-    - jupyterlab
-    - matplotlib
-    - metpy
-    - nc-time-axis
-    - netcdf4
-    - nodejs
-    - numba
-    - numpy
-    - pandas
-    - pint
-    - pip
-    - pop-tools
-    - pre-commit
-    - pytest
-    - python==3.8
-    - scipy
-    - seaborn
-    - seawater
-    - statsmodels
-    - toolz
-    - tqdm
-    - watermark
-    - xarray>=0.20.1
-    - xesmf # xarray interface it ESMF tools
-    - xgcm # General Circulation Model Postprocessing with xarray
-    - xhistogram # Fast, flexible, label-aware histograms for numpy and xarray
-    - xrft # fourier transforms for xarray data
-    - xoak
-    - xskillscore>=0.0.23
-    - zarr
-    - ncar-jobqueue
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - aiohttp=3.8.3=py310h5764c6d_1
+  - aiosignal=1.3.1=pyhd8ed1ab_0
+  - alsa-lib=1.2.8=h166bdaf_0
+  - antlr-python-runtime=4.7.2=py310hff52083_1003
+  - anyio=3.6.2=pyhd8ed1ab_0
+  - appdirs=1.4.4=pyh9f0ad1d_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py310h5764c6d_3
+  - asciitree=0.3.3=py_2
+  - asttokens=2.2.1=pyhd8ed1ab_0
+  - async-timeout=4.0.2=pyhd8ed1ab_0
+  - attr=2.5.1=h166bdaf_1
+  - attrs=22.2.0=pyh71513ae_0
+  - babel=2.11.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.11.1=pyha770c72_0
+  - bias_correction=0.4=pyhd8ed1ab_0
+  - bleach=6.0.0=pyhd8ed1ab_0
+  - blosc=1.21.3=hafa529b_0
+  - bokeh=3.0.3=pyhd8ed1ab_0
+  - boltons=21.0.0=pyhd8ed1ab_0
+  - boost-cpp=1.78.0=h75c5d50_1
+  - bottleneck=1.3.6=py310h0a54255_0
+  - branca=0.6.0=pyhd8ed1ab_0
+  - brotli=1.0.9=h166bdaf_8
+  - brotli-bin=1.0.9=h166bdaf_8
+  - brotlipy=0.7.0=py310h5764c6d_1005
+  - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.18.1=h7f98852_0
+  - ca-certificates=2022.12.7=ha878542_0
+  - cairo=1.16.0=ha61ee94_1014
+  - cartopy=0.21.1=py310hcb7e713_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
+  - cf-units=3.1.1=py310hde88566_2
+  - cf_xarray=0.7.7=pyhd8ed1ab_0
+  - cffi=1.15.1=py310h255011f_3
+  - cfgv=3.3.1=pyhd8ed1ab_0
+  - cfitsio=4.2.0=hd9d235c_0
+  - cftime=1.6.2=py310hde88566_1
+  - charset-normalizer=2.1.1=pyhd8ed1ab_0
+  - click=8.1.3=unix_pyhd8ed1ab_2
+  - click-plugins=1.1.1=py_0
+  - cligj=0.7.2=pyhd8ed1ab_1
+  - climpred=2.3.0=pyhd8ed1ab_0
+  - cloudpickle=2.2.1=pyhd8ed1ab_0
+  - cmaps=1.0.5=pyhd8ed1ab_0
+  - cmocean=2.0=py_3
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - colorcet=3.0.1=pyhd8ed1ab_0
+  - colorspacious=1.1.2=pyh24bf2e0_0
+  - comm=0.1.2=pyhd8ed1ab_0
+  - contourpy=1.0.7=py310hdf3cbec_0
+  - cryptography=39.0.0=py310h34c0648_0
+  - curl=7.87.0=hdc1c0ab_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - cytoolz=0.12.0=py310h5764c6d_1
+  - dask=2022.11.0=pyhd8ed1ab_0
+  - dask-core=2022.11.0=pyhd8ed1ab_0
+  - dask-jobqueue=0.8.1=pyhd8ed1ab_0
+  - dask-labextension=6.0.0=pyhd8ed1ab_0
+  - datashader=0.14.3=pyh1a96a4e_0
+  - datashape=0.5.4=py_1
+  - dbus=1.13.6=h5008d03_3
+  - debugpy=1.6.6=py310heca2aa9_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - distlib=0.3.6=pyhd8ed1ab_0
+  - distributed=2022.11.0=pyhd8ed1ab_0
+  - docrep=0.3.2=pyh44b312d_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - eofs=1.4.0=py_0
+  - esmf=8.4.0=mpi_mpich_hc592774_102
+  - esmpy=8.4.0=mpi_mpich_py310h515c5ea_101
+  - exceptiongroup=1.1.0=pyhd8ed1ab_0
+  - executing=1.2.0=pyhd8ed1ab_0
+  - expat=2.5.0=h27087fc_0
+  - fasteners=0.17.3=pyhd8ed1ab_0
+  - fastprogress=1.0.3=pyhd8ed1ab_0
+  - fftw=3.3.10=nompi_hf0379b8_106
+  - filelock=3.9.0=pyhd8ed1ab_0
+  - fiona=1.9.0=py310ha325b7b_0
+  - flit-core=3.8.0=pyhd8ed1ab_0
+  - folium=0.14.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.38.0=py310h5764c6d_1
+  - freetype=2.12.1=hca18f0e_1
+  - freexl=1.0.6=h166bdaf_1
+  - frozenlist=1.3.3=py310h5764c6d_0
+  - fsspec=2023.1.0=pyhd8ed1ab_0
+  - future=0.18.3=pyhd8ed1ab_0
+  - gdal=3.6.2=py310hc1b7723_5
+  - geocat-comp=2022.11.0=pyha770c72_0
+  - geocat-f2py=2022.04.0=py310h8adf1f6_1
+  - geocat-viz=2022.07.0=pyhd8ed1ab_0
+  - geopandas=0.12.2=pyhd8ed1ab_0
+  - geopandas-base=0.12.2=pyha770c72_0
+  - geos=3.11.1=h27087fc_0
+  - geotiff=1.7.1=h7a142b4_6
+  - geoviews=1.6.6=py_1
+  - geoviews-core=1.6.6=py_1
+  - gettext=0.21.1=h27087fc_0
+  - giflib=5.2.1=h36c2ea0_2
+  - glib=2.74.1=h6239696_1
+  - glib-tools=2.74.1=h6239696_1
+  - graphite2=1.3.13=h58526e2_1001
+  - gst-plugins-base=1.21.3=h4243ec0_1
+  - gstreamer=1.21.3=h25f0c4b_1
+  - gstreamer-orc=0.4.33=h166bdaf_0
+  - harfbuzz=6.0.0=h8e241bc_0
+  - hdf4=4.2.15=h9772cbc_5
+  - hdf5=1.12.2=mpi_mpich_h5d83325_1
+  - heapdict=1.0.1=py_0
+  - holoviews=1.12.7=py_0
+  - icu=70.1=h27087fc_0
+  - identify=2.5.17=pyhd8ed1ab_0
+  - idna=3.4=pyhd8ed1ab_0
+  - importlib-metadata=6.0.0=pyha770c72_0
+  - importlib_metadata=6.0.0=hd8ed1ab_0
+  - importlib_resources=5.10.2=pyhd8ed1ab_0
+  - iniconfig=2.0.0=pyhd8ed1ab_0
+  - intake=0.6.6=pyhd8ed1ab_0
+  - intake-esm=2022.9.18=pyhd8ed1ab_0
+  - ipykernel=6.21.0=pyh210e3f2_0
+  - ipython=8.9.0=pyh41d4057_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=8.0.4=pyhd8ed1ab_0
+  - jack=1.9.21=h583fa2b_2
+  - jedi=0.18.2=pyhd8ed1ab_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - joblib=1.2.0=pyhd8ed1ab_0
+  - jpeg=9e=h166bdaf_2
+  - json-c=0.16=hc379101_0
+  - json5=0.9.5=pyh9f0ad1d_0
+  - jsonpickle=2.2.0=pyhd8ed1ab_0
+  - jsonschema=4.17.3=pyhd8ed1ab_0
+  - jupyter=1.0.0=py310hff52083_8
+  - jupyter-server-proxy=3.2.2=pyhd8ed1ab_0
+  - jupyter_client=7.3.4=pyhd8ed1ab_0
+  - jupyter_console=6.4.4=pyhd8ed1ab_0
+  - jupyter_core=5.2.0=py310hff52083_0
+  - jupyter_server=1.23.5=pyhd8ed1ab_0
+  - jupyterlab=3.5.3=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_server=2.19.0=pyhd8ed1ab_0
+  - jupyterlab_widgets=3.0.5=pyhd8ed1ab_0
+  - kealib=1.5.0=ha7026e8_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.4=py310hbf28c38_1
+  - krb5=1.20.1=h81ceb04_0
+  - lame=3.100=h166bdaf_1003
+  - lcms2=2.14=hfd0df8a_1
+  - ld_impl_linux-64=2.40=h41732ed_0
+  - lerc=4.0.0=h27087fc_0
+  - libaec=1.0.6=hcb278e6_1
+  - libblas=3.9.0=16_linux64_openblas
+  - libbrotlicommon=1.0.9=h166bdaf_8
+  - libbrotlidec=1.0.9=h166bdaf_8
+  - libbrotlienc=1.0.9=h166bdaf_8
+  - libcap=2.66=ha37c62d_0
+  - libcblas=3.9.0=16_linux64_openblas
+  - libclang=15.0.7=default_had23c3d_0
+  - libclang13=15.0.7=default_h3e3d535_0
+  - libcups=2.3.3=h36d4200_3
+  - libcurl=7.87.0=hdc1c0ab_0
+  - libdb=6.2.32=h9c3ff4c_0
+  - libdeflate=1.17=h0b41bf4_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
+  - libevent=2.1.10=h28343ad_4
+  - libffi=3.4.2=h7f98852_5
+  - libflac=1.4.2=h27087fc_0
+  - libgcc-ng=12.2.0=h65d4601_19
+  - libgcrypt=1.10.1=h166bdaf_0
+  - libgdal=3.6.2=h8c90c07_5
+  - libgfortran-ng=12.2.0=h69a702a_19
+  - libgfortran5=12.2.0=h337968e_19
+  - libglib=2.74.1=h606061b_1
+  - libgomp=12.2.0=h65d4601_19
+  - libgpg-error=1.46=h620e276_0
+  - libiconv=1.17=h166bdaf_0
+  - libjpeg-turbo=2.1.4=h166bdaf_0
+  - libkml=1.3.0=h37653c0_1015
+  - liblapack=3.9.0=16_linux64_openblas
+  - libllvm11=11.1.0=he0ac6c6_5
+  - libllvm15=15.0.7=hadd5161_0
+  - libnetcdf=4.8.1=mpi_mpich_hcd871d9_6
+  - libnghttp2=1.51.0=hff17c54_0
+  - libnsl=2.0.0=h7f98852_0
+  - libogg=1.3.4=h7f98852_1
+  - libopenblas=0.3.21=pthreads_h78a6416_3
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.39=h753d276_0
+  - libpq=15.1=hb675445_3
+  - librttopo=1.1.0=ha49c73b_12
+  - libsndfile=1.2.0=hb75c966_0
+  - libsodium=1.0.18=h36c2ea0_1
+  - libspatialindex=1.9.3=h9c3ff4c_4
+  - libspatialite=5.0.1=h221c8f1_23
+  - libsqlite=3.40.0=h753d276_0
+  - libssh2=1.10.0=hf14f497_3
+  - libstdcxx-ng=12.2.0=h46fd767_19
+  - libsystemd0=252=h2a991cd_0
+  - libtiff=4.5.0=h6adf6a1_2
+  - libtool=2.4.7=h27087fc_0
+  - libudev1=252=h166bdaf_0
+  - libuuid=2.32.1=h7f98852_1000
+  - libuv=1.44.2=h166bdaf_0
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp-base=1.2.4=h166bdaf_0
+  - libxcb=1.13=h7f98852_1004
+  - libxkbcommon=1.0.3=he3ba5ed_0
+  - libxml2=2.10.3=h7463322_0
+  - libzip=1.9.2=hc929e4a_1
+  - libzlib=1.2.13=h166bdaf_4
+  - llvmlite=0.39.1=py310h58363a5_1
+  - locket=1.0.0=pyhd8ed1ab_0
+  - lz4=4.2.0=py310h0cfdcf0_0
+  - lz4-c=1.9.4=hcb278e6_0
+  - mapclassify=2.5.0=pyhd8ed1ab_1
+  - markupsafe=2.1.2=py310h1fa729e_0
+  - matplotlib=3.6.3=py310hff52083_0
+  - matplotlib-base=3.6.3=py310he60537e_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - metpy=1.4.0=pyhd8ed1ab_0
+  - mistune=2.0.4=pyhd8ed1ab_0
+  - mpg123=1.31.2=hcb278e6_0
+  - mpi=1.0=mpich
+  - mpi4py=3.1.4=py310h37cc914_0
+  - mpich=4.0.3=h846660c_100
+  - msgpack-python=1.0.4=py310hbf28c38_1
+  - multidict=6.0.4=py310h1fa729e_0
+  - multipledispatch=0.6.0=py_0
+  - munch=2.5.0=py_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=8.0.32=ha901b37_0
+  - mysql-libs=8.0.32=hd7da12d_0
+  - nbclassic=0.4.8=pyhd8ed1ab_0
+  - nbclient=0.7.2=pyhd8ed1ab_0
+  - nbconvert=7.2.9=pyhd8ed1ab_0
+  - nbconvert-core=7.2.9=pyhd8ed1ab_0
+  - nbconvert-pandoc=7.2.9=pyhd8ed1ab_0
+  - nbformat=5.7.3=pyhd8ed1ab_0
+  - nc-time-axis=1.4.1=pyhd8ed1ab_0
+  - ncar-jobqueue=2021.4.14=pyh44b312d_0
+  - ncurses=6.3=h27087fc_1
+  - nest-asyncio=1.5.6=pyhd8ed1ab_0
+  - netcdf-fortran=4.6.0=mpi_mpich_h1e13492_2
+  - netcdf4=1.6.2=nompi_py310h55e1e36_100
+  - networkx=3.0=pyhd8ed1ab_0
+  - nodeenv=1.7.0=pyhd8ed1ab_0
+  - nodejs=18.12.1=h8839609_0
+  - notebook=6.5.2=pyha770c72_1
+  - notebook-shim=0.2.2=pyhd8ed1ab_0
+  - nspr=4.35=h27087fc_0
+  - nss=3.82=he02c5a1_0
+  - numba=0.56.4=py310ha5257ce_0
+  - numcodecs=0.11.0=py310heca2aa9_1
+  - numpy=1.23.5=py310h53a5b5f_0
+  - openjpeg=2.5.0=hfec8fc6_2
+  - openssl=3.0.7=h0b41bf4_2
+  - packaging=23.0=pyhd8ed1ab_0
+  - pandas=1.5.3=py310h9b08913_0
+  - pandoc=2.19.2=h32600fe_1
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parallelio=2.5.10=mpi_mpich_h862c5c2_100
+  - param=1.12.3=pyh1a96a4e_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - partd=1.3.0=pyhd8ed1ab_0
+  - patsy=0.5.3=pyhd8ed1ab_0
+  - pcre2=10.40=hc3806b6_0
+  - pexpect=4.8.0=pyh1a96a4e_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.4.0=py310h4927cde_0
+  - pint=0.19.2=pyhd8ed1ab_0
+  - pip=23.0=pyhd8ed1ab_0
+  - pixman=0.40.0=h36c2ea0_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
+  - platformdirs=2.6.2=pyhd8ed1ab_0
+  - pluggy=1.0.0=pyhd8ed1ab_5
+  - ply=3.11=py_1
+  - pooch=1.6.0=pyhd8ed1ab_0
+  - poppler=23.01.0=h091648b_0
+  - poppler-data=0.4.11=hd8ed1ab_0
+  - postgresql=15.1=h3248436_3
+  - pre-commit=3.0.2=py310hff52083_0
+  - proj=9.1.1=h8ffa02c_2
+  - prometheus_client=0.16.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.36=pyha770c72_0
+  - prompt_toolkit=3.0.36=hd8ed1ab_0
+  - properscoring=0.1=py_0
+  - psutil=5.9.4=py310h5764c6d_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pulseaudio=16.1=ha8d29e2_1
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyct=0.4.6=py_0
+  - pyct-core=0.4.6=py_0
+  - pydantic=1.10.4=py310h1fa729e_1
+  - pygments=2.14.0=pyhd8ed1ab_0
+  - pyopenssl=23.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyproj=3.4.1=py310h15e2413_1
+  - pyqt=5.15.7=py310hab646b1_3
+  - pyqt5-sip=12.11.0=py310heca2aa9_3
+  - pyrsistent=0.19.3=py310h1fa729e_0
+  - pyshp=2.3.1=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha2e5f31_6
+  - pytest=7.2.1=pyhd8ed1ab_0
+  - python=3.10.8=h4a9ceb5_0_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
+  - python_abi=3.10=3_cp310
+  - pytz=2022.7.1=pyhd8ed1ab_0
+  - pyviz_comms=2.2.1=pyhd8ed1ab_1
+  - pyyaml=6.0=py310h5764c6d_5
+  - pyzmq=25.0.0=py310h059b190_0
+  - qt-main=5.15.6=h602db52_6
+  - qtconsole=5.4.0=pyhd8ed1ab_0
+  - qtconsole-base=5.4.0=pyha770c72_0
+  - qtpy=2.3.0=pyhd8ed1ab_0
+  - readline=8.1.2=h0f457ee_0
+  - requests=2.28.2=pyhd8ed1ab_0
+  - rtree=1.0.1=py310hbdcdc62_1
+  - scikit-learn=1.2.1=py310h209a8ca_0
+  - scipy=1.8.1=py310hdfbd76f_3
+  - seaborn=0.12.2=hd8ed1ab_0
+  - seaborn-base=0.12.2=pyhd8ed1ab_0
+  - seawater=3.3.4=py_1
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=66.1.1=pyhd8ed1ab_0
+  - shapely=1.8.5=py310h5b266fc_2
+  - simpervisor=0.4=pyhd8ed1ab_0
+  - sip=6.7.6=py310heca2aa9_0
+  - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.1.9=hbd366e4_2
+  - sniffio=1.3.0=pyhd8ed1ab_0
+  - sortedcontainers=2.4.0=pyhd8ed1ab_0
+  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
+  - sparse=0.13.0=pyhd8ed1ab_0
+  - sqlite=3.40.0=h4ff8645_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - statsmodels=0.13.5=py310hde88566_2
+  - tblib=1.7.0=pyhd8ed1ab_0
+  - terminado=0.17.1=pyh41d4057_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
+  - tiledb=2.13.2=hd532e3d_0
+  - tinycss2=1.2.1=pyhd8ed1ab_0
+  - tk=8.6.12=h27826a3_0
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - toolz=0.12.0=pyhd8ed1ab_0
+  - tornado=6.1=py310h5764c6d_3
+  - tqdm=4.64.1=pyhd8ed1ab_0
+  - traitlets=5.9.0=pyhd8ed1ab_0
+  - typing-extensions=4.4.0=hd8ed1ab_0
+  - typing_extensions=4.4.0=pyha770c72_0
+  - tzcode=2022g=h166bdaf_0
+  - tzdata=2022g=h191b570_0
+  - udunits2=2.2.28=hc3e0081_0
+  - ukkonen=1.0.1=py310hbf28c38_3
+  - unicodedata2=15.0.0=py310h5764c6d_0
+  - urllib3=1.26.14=pyhd8ed1ab_0
+  - virtualenv=20.17.1=py310hff52083_0
+  - watermark=2.3.1=pyhd8ed1ab_1
+  - wcwidth=0.2.6=pyhd8ed1ab_0
+  - webencodings=0.5.1=py_1
+  - websocket-client=1.5.0=pyhd8ed1ab_0
+  - wheel=0.38.4=pyhd8ed1ab_0
+  - widgetsnbextension=4.0.5=pyhd8ed1ab_0
+  - xarray=2023.1.0=pyhd8ed1ab_0
+  - xcb-util=0.4.0=h516909a_0
+  - xcb-util-image=0.4.0=h166bdaf_0
+  - xcb-util-keysyms=0.4.0=h516909a_0
+  - xcb-util-renderutil=0.3.9=h166bdaf_0
+  - xcb-util-wm=0.4.1=h516909a_0
+  - xclim=0.40.0=pyhd8ed1ab_0
+  - xerces-c=3.2.4=h55805fa_1
+  - xesmf=0.7.0=pyhd8ed1ab_0
+  - xgcm=0.8.1=pyhd8ed1ab_0
+  - xhistogram=0.3.2=pyhd8ed1ab_0
+  - xoak=0.1.1=pyhd8ed1ab_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.7.2=h7f98852_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xrft=1.0.0=pyhd8ed1ab_0
+  - xskillscore=0.0.24=pyhd8ed1ab_0
+  - xyzservices=2022.9.0=pyhd8ed1ab_0
+  - xz=5.2.6=h166bdaf_0
+  - yaml=0.2.5=h7f98852_2
+  - yarl=1.8.2=py310h5764c6d_0
+  - zarr=2.13.3=pyhd8ed1ab_0
+  - zeromq=4.3.4=h9c3ff4c_1
+  - zict=2.2.0=pyhd8ed1ab_0
+  - zipp=3.12.0=pyhd8ed1ab_0
+  - zlib=1.2.13=h166bdaf_4
+  - zstd=1.5.2=h3eb15da_6
+  - pip:
+      - esp-lab==1.1.post8
+      - pop-tools==2021.5.28.post43
+prefix: /glade/work/yeager/conda-envs/mypythonenv
